# Apple-Sider

./: .gitignore  Dockerfile  ENHANCEMENTS.md  LICENSE  MANIFEST.in  README.md  config.example.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.sh
app/: app.py  config.py  downloader.py  errors.py  parser.py
app/static/: app.js  index.html  script.js  service-worker.js  style.css
app/static/assets/: manifest.json
app/templates/: index.html
apple_sider/: __init__.py  cli.py  core.py
content/docs/: api-reference.md  changelog.md  configuration.md  getting-started.md  index.md  ui-features.md
